HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodReceiverNotSelf/Expected.uv
//! Expected diagnostic metadata for the RecordMethodReceiverNotSelf rejected-source specimen.

expectedDiagnostic("E-TYP-1912", "rule.15.Record-Method-RecvSelf-Err")
